AWS/iac-template/cfn/privatelink/iac-gen-temp/iac-gen-relay-elb-nlb-sg-tgrp.yml
---
Metadata:
  AWSToolsMetrics:
    IaC_Generator: "arn:aws:cloudformation:ap-northeast-1:515866223862:generatedTemplate/abd1d832-4d03-4a9f-9b92-7d65928e546c"
Resources:
  ElasticLoadBalancingV2TargetGroupTargetgrouptestfromnlbtoalb0edacdcbb3da4bf2:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      HealthCheckIntervalSeconds: 30
      Matcher:
        HttpCode: "200-399"
      HealthCheckPath: "/"
      Port: 443
      Targets:
      - AvailabilityZone: "all"
        Port: 443
        Id:
          Ref: "ElasticLoadBalancingV2LoadBalancerLoadbalancerapptestrelayalb0137e143333d3754e6"
      HealthCheckEnabled: true
      UnhealthyThresholdCount: 3
      HealthCheckTimeoutSeconds: 10
      Name: "test-from-nlb-to-alb"
      VpcId: "vpc-0c26e7c80a73849e2"
      HealthyThresholdCount: 3
      HealthCheckProtocol: "HTTPS"
      TargetGroupAttributes:
      - Value: "off"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.percentage"
      - Value: "false"
        Key: "stickiness.enabled"
      - Value: "off"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.percentage"
      - Value: "300"
        Key: "deregistration_delay.timeout_seconds"
      - Value: "1"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.count"
      - Value: "source_ip"
        Key: "stickiness.type"
      - Value: "true"
        Key: "preserve_client_ip.enabled"
      - Value: "1"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.count"
      - Value: "use_load_balancer_configuration"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "false"
        Key: "proxy_protocol_v2.enabled"
      - Value: "false"
        Key: "deregistration_delay.connection_termination.enabled"
      TargetType: "alb"
      HealthCheckPort: "traffic-port"
      Protocol: "TCP"
      Tags: []
  ElasticLoadBalancingV2ListenerListenerapptestrelayalb0137e143333d3754e62ec32d7eb6cb575c:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DeletionPolicy: "Retain"
    Properties:
      ListenerAttributes:
      - Value: "true"
        Key: "routing.http.response.server.enabled"
      - Value: ""
        Key: "routing.http.response.access_control_allow_headers.header_value"
      - Value: ""
        Key: "routing.http.response.x_frame_options.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_allow_methods.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_allow_origin.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_allow_credentials.header_value"
      - Value: ""
        Key: "routing.http.response.x_content_type_options.header_value"
      - Value: ""
        Key: "routing.http.response.content_security_policy.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_expose_headers.header_value"
      - Value: ""
        Key: "routing.http.response.strict_transport_security.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_max_age.header_value"
      Protocol: "HTTP"
      LoadBalancerArn:
        Ref: "ElasticLoadBalancingV2LoadBalancerLoadbalancerapptestrelayalb0137e143333d3754e6"
      DefaultActions:
      - Order: 1
        TargetGroupArn:
          Ref: "ElasticLoadBalancingV2TargetGroupTargetgrouptestfromalbtomh4web559a8c84aff6cae9"
        Type: "forward"
        ForwardConfig:
          TargetGroupStickinessConfig:
            Enabled: false
            DurationSeconds: 3600
          TargetGroups:
          - TargetGroupArn:
              Ref: "ElasticLoadBalancingV2TargetGroupTargetgrouptestfromalbtomh4web559a8c84aff6cae9"
            Weight: 1
      Port: 8080
  Route53ResolverResolverRuleAssociation:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Route53Resolver::ResolverRuleAssociation"
    DeletionPolicy: "Retain"
    Properties:
      VPCId: "vpc-0c26e7c80a73849e2"
      ResolverRuleId: "rslvr-autodefined-rr-internet-resolver"
      Name: "System Rule Association"
  ResourceExplorer2IndexIndex3fbaae8e185f4b7198a154727b518425:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ResourceExplorer2::Index"
    DeletionPolicy: "Retain"
    Properties:
      Type: "LOCAL"
      Tags: {}
  ElasticLoadBalancingV2ListenerListenernettestrelaynlb011a0221e5815a8faa4231fa32b54f0fa3:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DeletionPolicy: "Retain"
    Properties:
      ListenerAttributes:
      - Value: "350"
        Key: "tcp.idle_timeout.seconds"
      Protocol: "TCP"
      LoadBalancerArn:
        Ref: "ElasticLoadBalancingV2LoadBalancerLoadbalancernettestrelaynlb011a0221e5815a8faa"
      DefaultActions:
      - Order: 1
        Type: "forward"
        ForwardConfig:
          TargetGroupStickinessConfig:
            Enabled: false
          TargetGroups:
          - TargetGroupArn:
              Ref: "ElasticLoadBalancingV2TargetGroupTargetgrouptestfromnlbtomh4webtemp0ce495b314199660"
            Weight: 0
          - TargetGroupArn:
              Ref: "ElasticLoadBalancingV2TargetGroupTargetgrouptestfromnlbtoalb0edacdcbb3da4bf2"
            Weight: 1
      Port: 443
  ElasticLoadBalancingV2ListenerListenernettestrelaynlb011a0221e5815a8faa4a731ffad948580b:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DeletionPolicy: "Retain"
    Properties:
      ListenerAttributes:
      - Value: "350"
        Key: "tcp.idle_timeout.seconds"
      Protocol: "TCP"
      LoadBalancerArn:
        Ref: "ElasticLoadBalancingV2LoadBalancerLoadbalancernettestrelaynlb011a0221e5815a8faa"
      DefaultActions:
      - Order: 1
        TargetGroupArn:
          Ref: "ElasticLoadBalancingV2TargetGroupTargetgrouptestfromnlbtoalb8080tempde6d3791ff7d291e"
        Type: "forward"
        ForwardConfig:
          TargetGroupStickinessConfig:
            Enabled: false
          TargetGroups:
          - TargetGroupArn:
              Ref: "ElasticLoadBalancingV2TargetGroupTargetgrouptestfromnlbtoalb8080tempde6d3791ff7d291e"
            Weight: 1
      Port: 8080
  ElasticLoadBalancingV2TargetGroupTargetgrouptestfromnlbtoalb8080tempde6d3791ff7d291e:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      HealthCheckIntervalSeconds: 30
      Matcher:
        HttpCode: "200-399"
      HealthCheckPath: "/"
      Port: 8080
      Targets:
      - AvailabilityZone: "all"
        Port: 8080
        Id:
          Ref: "ElasticLoadBalancingV2LoadBalancerLoadbalancerapptestrelayalb0137e143333d3754e6"
      HealthCheckEnabled: true
      UnhealthyThresholdCount: 3
      HealthCheckTimeoutSeconds: 6
      Name: "test-from-nlb-to-alb-8080-temp"
      VpcId: "vpc-0c26e7c80a73849e2"
      HealthyThresholdCount: 3
      HealthCheckProtocol: "HTTP"
      TargetGroupAttributes:
      - Value: "off"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.percentage"
      - Value: "false"
        Key: "stickiness.enabled"
      - Value: "off"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.percentage"
      - Value: "300"
        Key: "deregistration_delay.timeout_seconds"
      - Value: "1"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.count"
      - Value: "source_ip"
        Key: "stickiness.type"
      - Value: "true"
        Key: "preserve_client_ip.enabled"
      - Value: "1"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.count"
      - Value: "use_load_balancer_configuration"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "false"
        Key: "proxy_protocol_v2.enabled"
      - Value: "false"
        Key: "deregistration_delay.connection_termination.enabled"
      TargetType: "alb"
      HealthCheckPort: "traffic-port"
      Protocol: "TCP"
      Tags: []
  EC2VPCEndpointService:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPCEndpointService"
    DeletionPolicy: "Retain"
    Properties:
      NetworkLoadBalancerArns:
      - Ref: "ElasticLoadBalancingV2LoadBalancerLoadbalancernettestrelaynlb011a0221e5815a8faa"
      SupportedIpAddressTypes:
      - "ipv4"
      AcceptanceRequired: true
      GatewayLoadBalancerArns: []
      SupportedRegions:
      - "ap-northeast-1"
      Tags:
      - Value: "vpce-service-web-01"
        Key: "Name"
  EC2SecurityGroupIG:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "test-privatelink-nlb01-sg"
      GroupName: "test-privatelink-nlb01-sg"
      VpcId: "vpc-0c26e7c80a73849e2"
      SecurityGroupIngress:
      - CidrIp: "10.3.0.0/16"
        IpProtocol: "tcp"
        Description: "from customer8080http to relay-alb01"
        FromPort: 8080
        ToPort: 8080
      - CidrIp: "10.0.0.0/8"
        IpProtocol: "tcp"
        Description: "from customer https to relay-alb01"
        FromPort: 443
        ToPort: 443
      SecurityGroupEgress:
      - CidrIp: "10.0.0.0/8"
        IpProtocol: "tcp"
        Description: "from customer-http8080 to relay-alb01"
        FromPort: 8080
        ToPort: 8080
      - CidrIp: "10.0.0.0/8"
        IpProtocol: "tcp"
        Description: "from customer https to relay-alb01"
        FromPort: 443
        ToPort: 443
  ElasticLoadBalancingV2LoadBalancerLoadbalancerapptestrelayalb0137e143333d3754e6:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      SecurityGroups:
      - "sg-024483f30e3a9f5c1"
      LoadBalancerAttributes:
      - Value: ""
        Key: "access_logs.s3.prefix"
      - Value: "append"
        Key: "routing.http.xff_header_processing.mode"
      - Value: "true"
        Key: "routing.http2.enabled"
      - Value: "false"
        Key: "waf.fail_open.enabled"
      - Value: ""
        Key: "connection_logs.s3.bucket"
      - Value: "false"
        Key: "access_logs.s3.enabled"
      - Value: "false"
        Key: "zonal_shift.config.enabled"
      - Value: "defensive"
        Key: "routing.http.desync_mitigation_mode"
      - Value: ""
        Key: "connection_logs.s3.prefix"
      - Value: ""
        Key: "health_check_logs.s3.prefix"
      - Value: "false"
        Key: "routing.http.x_amzn_tls_version_and_cipher_suite.enabled"
      - Value: "false"
        Key: "routing.http.preserve_host_header.enabled"
      - Value: "true"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "false"
        Key: "health_check_logs.s3.enabled"
      - Value: ""
        Key: "health_check_logs.s3.bucket"
      - Value: "false"
        Key: "routing.http.xff_client_port.enabled"
      - Value: ""
        Key: "access_logs.s3.bucket"
      - Value: "false"
        Key: "deletion_protection.enabled"
      - Value: "3600"
        Key: "client_keep_alive.seconds"
      - Value: "false"
        Key: "routing.http.drop_invalid_header_fields.enabled"
      - Value: "false"
        Key: "connection_logs.s3.enabled"
      - Value: "60"
        Key: "idle_timeout.timeout_seconds"
      Subnets:
      - "subnet-020dd3433c3e6bb0e"
      - "subnet-0c6dd629220e9289a"
      Type: "application"
      Scheme: "internal"
      EnablePrefixForIpv6SourceNat: "off"
      Tags: []
      Name: "test-relay-alb-01"
      SubnetMappings:
      - SubnetId: "subnet-0c6dd629220e9289a"
      - SubnetId: "subnet-020dd3433c3e6bb0e"
  EC2SecurityGroup:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "test-privatelink-alb01-sg"
      GroupName: "test-privatelink-alb01-sg"
      VpcId: "vpc-0c26e7c80a73849e2"
      SecurityGroupIngress:
      - CidrIp: "10.1.0.0/16"
        IpProtocol: "tcp"
        Description: "from pl-nlb"
        FromPort: 8080
        ToPort: 8080
      - CidrIp: "10.1.0.0/16"
        IpProtocol: "tcp"
        Description: "from pl-nlb"
        FromPort: 443
        ToPort: 443
      SecurityGroupEgress:
      - CidrIp: "10.0.0.0/8"
        IpProtocol: "tcp"
        Description: "to-mh4-web"
        FromPort: 8080
        ToPort: 8080
  EC2Route:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      TransitGatewayId:
        Ref: "EC2TransitGateway"
      RouteTableId: "rtb-030051ec498374590"
      DestinationCidrBlock: "10.2.0.0/16"
  EC2KeyPairRelaykeypair:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::KeyPair"
    DeletionPolicy: "Retain"
    Properties:
      KeyName: "relay-keypair"
      KeyType: "ed25519"
      PublicKeyMaterial: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIEVGBO1OrWO3ARBSAYhegp2ROT1H9nBlVV7ccgJSTwfW\
        \ relay-keypair\n"
      Tags: []
  EC2TransitGateway:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::TransitGateway"
    DeletionPolicy: "Retain"
    Properties:
      Description: "test-pl-tgw"
      AssociationDefaultRouteTableId: "tgw-rtb-0e1951f18e45036a4"
      AutoAcceptSharedAttachments: "enable"
      DefaultRouteTablePropagation: "enable"
      TransitGatewayCidrBlocks: []
      PropagationDefaultRouteTableId: "tgw-rtb-0e1951f18e45036a4"
      DefaultRouteTableAssociation: "enable"
      VpnEcmpSupport: "enable"
      SecurityGroupReferencingSupport: "disable"
      DnsSupport: "enable"
      MulticastSupport: "disable"
      AmazonSideAsn: 64512
      Tags: []
  ElasticLoadBalancingV2ListenerListenerapptestrelayalb0137e143333d3754e68562d7e376e47c5e:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DeletionPolicy: "Retain"
    Properties:
      MutualAuthentication:
        Mode: "off"
      ListenerAttributes:
      - Value: ""
        Key: "routing.http.request.x_amzn_tls_cipher_suite.header_name"
      - Value: ""
        Key: "routing.http.request.x_amzn_mtls_clientcert_serial_number.header_name"
      - Value: ""
        Key: "routing.http.response.access_control_allow_origin.header_value"
      - Value: ""
        Key: "routing.http.response.content_security_policy.header_value"
      - Value: ""
        Key: "routing.http.request.x_amzn_mtls_clientcert_leaf.header_name"
      - Value: ""
        Key: "routing.http.request.x_amzn_tls_version.header_name"
      - Value: "true"
        Key: "routing.http.response.server.enabled"
      - Value: ""
        Key: "routing.http.response.access_control_allow_headers.header_value"
      - Value: ""
        Key: "routing.http.response.x_frame_options.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_allow_methods.header_value"
      - Value: ""
        Key: "routing.http.request.x_amzn_mtls_clientcert_issuer.header_name"
      - Value: ""
        Key: "routing.http.request.x_amzn_mtls_clientcert.header_name"
      - Value: ""
        Key: "routing.http.request.x_amzn_mtls_clientcert_validity.header_name"
      - Value: ""
        Key: "routing.http.response.access_control_allow_credentials.header_value"
      - Value: ""
        Key: "routing.http.request.x_amzn_mtls_clientcert_subject.header_name"
      - Value: ""
        Key: "routing.http.response.x_content_type_options.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_expose_headers.header_value"
      - Value: ""
        Key: "routing.http.response.strict_transport_security.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_max_age.header_value"
      SslPolicy: "ELBSecurityPolicy-TLS13-1-2-Res-PQ-2025-09"
      LoadBalancerArn:
        Ref: "ElasticLoadBalancingV2LoadBalancerLoadbalancerapptestrelayalb0137e143333d3754e6"
      DefaultActions:
      - Order: 1
        TargetGroupArn:
          Ref: "ElasticLoadBalancingV2TargetGroupTargetgrouptestfromalbtomh4web559a8c84aff6cae9"
        Type: "forward"
        ForwardConfig:
          TargetGroupStickinessConfig:
            Enabled: false
            DurationSeconds: 3600
          TargetGroups:
          - TargetGroupArn:
              Ref: "ElasticLoadBalancingV2TargetGroupTargetgrouptestfromalbtomh4web559a8c84aff6cae9"
            Weight: 1
      Port: 443
      Certificates:
      - CertificateArn: "arn:aws:acm:ap-northeast-1:515866223862:certificate/7897ad40-c3a1-4712-bac7-56fc7b489e27"
      Protocol: "HTTPS"
  ElasticLoadBalancingV2TargetGroupTargetgrouptestfromalbtomh4web559a8c84aff6cae9:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      HealthCheckIntervalSeconds: 20
      Matcher:
        HttpCode: "200"
      HealthCheckPath: "/"
      Port: 8080
      Targets:
      - AvailabilityZone: "all"
        Port: 8080
        Id: "10.2.11.83"
      HealthCheckEnabled: true
      ProtocolVersion: "HTTP1"
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      Name: "test-from-alb-to-mh4-web"
      VpcId: "vpc-0c26e7c80a73849e2"
      HealthyThresholdCount: 5
      HealthCheckProtocol: "HTTP"
      TargetGroupAttributes:
      - Value: "lb_cookie"
        Key: "stickiness.type"
      - Value: "86400"
        Key: "stickiness.app_cookie.duration_seconds"
      - Value: "1"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.count"
      - Value: "use_load_balancer_configuration"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "86400"
        Key: "stickiness.lb_cookie.duration_seconds"
      - Value: "off"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.percentage"
      - Value: "false"
        Key: "stickiness.enabled"
      - Value: "off"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.percentage"
      - Value: "0"
        Key: "slow_start.duration_seconds"
      - Value: "300"
        Key: "deregistration_delay.timeout_seconds"
      - Value: "1"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.count"
      - Value: "off"
        Key: "load_balancing.algorithm.anomaly_mitigation"
      - Value: ""
        Key: "stickiness.app_cookie.cookie_name"
      - Value: "round_robin"
        Key: "load_balancing.algorithm.type"
      TargetType: "ip"
      HealthCheckPort: "traffic-port"
      Protocol: "HTTP"
      Tags: []
  ElasticLoadBalancingV2LoadBalancerLoadbalancernettestrelaynlb011a0221e5815a8faa:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      SecurityGroups:
      - "sg-08a5dda86252aca92"
      LoadBalancerAttributes:
      - Value: ""
        Key: "access_logs.s3.prefix"
      - Value: "false"
        Key: "zonal_shift.config.enabled"
      - Value: "false"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "false"
        Key: "access_logs.s3.enabled"
      - Value: ""
        Key: "access_logs.s3.bucket"
      - Value: "false"
        Key: "deletion_protection.enabled"
      - Value: "0"
        Key: "secondary_ips.auto_assigned.per_subnet"
      - Value: "any_availability_zone"
        Key: "dns_record.client_routing_policy"
      Subnets:
      - "subnet-020dd3433c3e6bb0e"
      - "subnet-0c6dd629220e9289a"
      Type: "network"
      Scheme: "internal"
      EnablePrefixForIpv6SourceNat: "off"
      EnforceSecurityGroupInboundRulesOnPrivateLinkTraffic: "off"
      Tags: []
      Name: "test-relay-nlb-01"
      SubnetMappings:
      - SubnetId: "subnet-0c6dd629220e9289a"
        PrivateIPv4Address: "10.1.2.4"
      - SubnetId: "subnet-020dd3433c3e6bb0e"
        PrivateIPv4Address: "10.1.1.4"
  ResourceExplorer2ViewViewapnortheast1049e041e0bbf411992f2eecb7b17c0f2:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ResourceExplorer2::View"
    DeletionPolicy: "Retain"
    Properties:
      IncludedProperties:
      - Name: "tags"
      Filters:
        FilterString: ""
      Scope: "arn:aws:iam::515866223862:root"
      Tags: {}
      ViewName: "ap-northeast-1"
  EC2RouteXN:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      TransitGatewayId:
        Ref: "EC2TransitGateway"
      RouteTableId: "rtb-06ea308347c1737c4"
      DestinationCidrBlock: "10.2.0.0/16"
  EC2TransitGatewayAttachment:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::TransitGatewayAttachment"
    DeletionPolicy: "Retain"
    Properties:
      Options:
        ApplianceModeSupport: "disable"
        SecurityGroupReferencingSupport: "enable"
        DnsSupport: "enable"
        Ipv6Support: "disable"
      TransitGatewayId:
        Ref: "EC2TransitGateway"
      VpcId: "vpc-0c26e7c80a73849e2"
      SubnetIds:
      - "subnet-020dd3433c3e6bb0e"
      - "subnet-0d4abe161663015b3"
      - "subnet-085dea1256de21dc2"
      Tags: []
  EC2TransitGatewayVpcAttachment:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::TransitGatewayVpcAttachment"
    DeletionPolicy: "Retain"
    Properties:
      Options:
        ApplianceModeSupport: "disable"
        SecurityGroupReferencingSupport: "enable"
        DnsSupport: "enable"
        Ipv6Support: "disable"
      TransitGatewayId:
        Ref: "EC2TransitGateway"
      VpcId: "vpc-0c26e7c80a73849e2"
      SubnetIds:
      - "subnet-020dd3433c3e6bb0e"
      - "subnet-0d4abe161663015b3"
      - "subnet-085dea1256de21dc2"
      Tags: []
  ElasticLoadBalancingV2TargetGroupTargetgrouptestfromnlbtomh4webtemp0ce495b314199660:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      HealthCheckIntervalSeconds: 11
      Port: 8080
      Targets:
      - AvailabilityZone: "all"
        Port: 8080
        Id: "10.2.11.83"
      HealthCheckEnabled: true
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 10
      Name: "test-from-nlb-to-mh4web-temp"
      VpcId: "vpc-0c26e7c80a73849e2"
      HealthyThresholdCount: 5
      HealthCheckProtocol: "TCP"
      TargetGroupAttributes:
      - Value: "source_ip"
        Key: "stickiness.type"
      - Value: "1"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.count"
      - Value: "use_load_balancer_configuration"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "off"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.percentage"
      - Value: "false"
        Key: "stickiness.enabled"
      - Value: "off"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.percentage"
      - Value: "0"
        Key: "target_health_state.unhealthy.draining_interval_seconds"
      - Value: "300"
        Key: "deregistration_delay.timeout_seconds"
      - Value: "1"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.count"
      - Value: "false"
        Key: "proxy_protocol_v2.enabled"
      - Value: "false"
        Key: "deregistration_delay.connection_termination.enabled"
      - Value: "false"
        Key: "preserve_client_ip.enabled"
      - Value: "true"
        Key: "target_health_state.unhealthy.connection_termination.enabled"
      TargetType: "ip"
      HealthCheckPort: "traffic-port"
      Protocol: "TCP"
      Tags: []
